--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@
 Title: KCZ Photography - CSS Page
 Use: Style Sheet for KCZ Photography
 Author: Kaleigh Ziglar 
-School/Term: Southern Illionis University, Spring 2022
+School/Term: Southern Illinois University, Spring 2022
 Developed: April 17, 2022
 Tested: May 4, 2022: Passed on Chrome and Microsoft Edge browsers. 
 *********************************************************************
